fix:(i/phone): Adjust some margins/spacings (#12867)

--- a/src/pages/common/forms/EmojiTextInput/EmojiTextInput.less
+++ b/src/pages/common/forms/EmojiTextInput/EmojiTextInput.less
@@ -1,8 +1,9 @@
 :local {
     .emojiPicker {
-        margin-left: 8px;
-        margin-right: -2px;
-        width: 28px;
+        margin-top: 1px;
+        margin-left: 2px;
+        margin-right: 2px;
+        width: 30px;
     }
 
     .inputGroup {
